<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="de.risikous.views.QuestionnaireActivity" android:background="#ff5492ff">


    <Button
    android:id="@+id/Meldung"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Meldung"
    android:layout_alignTop="@+id/Veröffentlichung" android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"/>
    <Button
            android:id="@+id/Veröffentlichung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Veröffentlichung" android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_below="@+id/Meldung" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginTop="32dp"
            android:layout_alignParentBottom="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" android:background="#ffbac6ff" android:fillViewport="true">
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relative">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Zwischenfallsmeldung"
                    android:id="@+id/ZfmText" android:textColor="#000000"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Pflichtfelder"
                    android:id="@+id/Pflichtfelder"
                    android:textColor="#ffff200c"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" android:layout_marginTop="38dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Meldekreis"
                    android:id="@+id/Meldekreis"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" android:layout_marginTop="72dp"
                    android:background="#ff4c93ff" android:textColor="#ffffdda2"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/Ereignis"
                      android:id="@+id/Ereignis"
                      android:background="#ff4c93ff" android:textColor="#ffffdda2"
                      android:layout_marginTop="39dp"
                      android:layout_below="@+id/Meldekreis" android:layout_alignParentLeft="true"
                      android:layout_alignParentStart="true"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/Ereigniseingabe" android:layout_below="@+id/Ereignis"
                    android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/Risiko"
                      android:id="@+id/Risikobewertung" android:background="#ff4c93ff" android:textColor="#ffffdda2"
                      android:layout_below="@+id/Ereigniseingabe" android:layout_alignParentLeft="true"
                      android:layout_alignParentStart="true"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hoch"
                    android:id="@+id/radioButton1"
                    android:textColor="#000000"
                    android:checked="false" android:clickable="true"
                    android:layout_below="@+id/Eintritt" android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mittel"
                    android:id="@+id/radioButton2"
                    android:clickable="true" android:textColor="#000000"
                    android:layout_below="@+id/Eintritt" android:layout_alignRight="@+id/Risikobewertung"
                    android:layout_alignEnd="@+id/Risikobewertung"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/niedrig"
                android:id="@+id/radioButton3"
                android:textColor="#ff000000"
                android:layout_below="@+id/Eintritt" android:layout_toRightOf="@+id/Eintritt"
                android:layout_toEndOf="@+id/Eintritt"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/EintrittsWS"
                    android:id="@+id/Eintritt"
                    android:textColor="#ff000000" android:layout_below="@+id/Risikobewertung"
                    android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
