<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="de.risikous.views.PublicationsActivity" android:background="#ff5492ff">

    <Button
            android:id="@+id/Meldung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Meldung"
            android:layout_alignTop="@+id/Veröffentlichung" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <Button
            android:id="@+id/Veröffentlichung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Veröffentlichung" android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_below="@+id/Meldung"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_marginTop="38dp" android:background="#ffbac6ff">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Änderung"
                    android:id="@+id/Änderung" android:layout_column="0" android:background="#ffafb4ff"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Titel"
                    android:id="@+id/Titel" android:layout_column="1" android:background="#ffafb4ff"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Status"
                    android:id="@+id/Status" android:layout_column="2" android:background="#ffafb4ff"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
        </TableRow>
    </TableLayout>

</RelativeLayout>
