<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="de.risikous.views.PublicationActivity"
                android:background="#ff5492ff">


    <Button
            android:id="@+id/Meldung"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/Meldung"
            android:layout_alignTop="@+id/Veröffentlichung"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <Button
            android:id="@+id/Veröffentlichung"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/Veröffentlichung"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView2"
            android:layout_below="@+id/Meldung"
            android:layout_marginTop="32dp"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:screenOrientation="portrait">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.00"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/detailAnsicht"
                    android:id="@+id/ZfmText"
                    android:textColor="#000000"
                    android:layout_gravity="center_horizontal"
                    android:gravity="top|center"/>


            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:text="@string/Titel"
                      android:id="@+id/title"
                      android:background="#ffbac6ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:id="@+id/titelValue"
                      android:background="#ff5492ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:text="@string/incidentReport"
                      android:id="@+id/incidentReport"
                      android:background="#ffbac6ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:id="@+id/incidentReportValue"
                      android:background="#ff5492ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:text="@string/minRPZofReporter"
                      android:id="@+id/minRPZofReporter"
                      android:background="#ffbac6ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:id="@+id/minRPZofReporterValue"
                      android:background="#ff5492ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:text="@string/avgRPZofReporter"
                      android:id="@+id/avgRPZofReporter"
                      android:background="#ffbac6ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:id="@+id/avgRPZofReporterValue"
                      android:background="#ff5492ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:text="@string/maxRPZofReporter"
                      android:id="@+id/maxRPZofReporter"
                      android:background="#ffbac6ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:id="@+id/maxRPZofReporterValue"
                      android:background="#ff5492ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:text="@string/minRPZofQMB"
                      android:id="@+id/minRPZofQMB"
                      android:background="#ffbac6ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:id="@+id/minRPZofQMBValue"
                      android:background="#ff5492ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:text="@string/avgRPZofQMB"
                      android:id="@+id/avgRPZofQMB"
                      android:background="#ffbac6ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:id="@+id/avgRPZofQMBValue"
                      android:background="#ff5492ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:text="@string/maxRPZofQMB"
                      android:id="@+id/maxRPZofQMB"
                      android:background="#ffbac6ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:id="@+id/maxRPZofQMBValue"
                      android:background="#ff5492ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:text="@string/differenceStatement"
                      android:id="@+id/differenceStatement"
                      android:background="#ffbac6ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:id="@+id/differenceStatementValue"
                      android:background="#ff5492ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:text="@string/category"
                      android:id="@+id/category"
                      android:background="#ffbac6ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:id="@+id/categoryValue"
                      android:background="#ff5492ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:text="@string/action"
                      android:id="@+id/action"
                      android:background="#ffbac6ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:id="@+id/actionValue"
                      android:background="#ff5492ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:text="@string/assignedReports"
                      android:id="@+id/assignedReports"
                      android:background="#ffbac6ff"
                      android:textColor="#000000"
                      android:gravity="left"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10dp"
                      android:textAppearance="?android:attr/textAppearanceSmall"
                      android:id="@+id/assignedReportsValue"
                      android:background="#ff5492ff"
                      android:textColor="#000000"
                      android:gravity="left"/>


            <Button
                    android:id="@+id/showComments"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/showComments"
                    android:layout_alignTop="@+id/Veröffentlichung"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

        </LinearLayout>
        
    </ScrollView>

</RelativeLayout>


